# DirectionalReMesher

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  directional_build_backend.py  pyproject.toml  requirements.txt  setup.py  vcpkg-configuration.json
cmake/: DirectionalConfig.cmake.in  DirectionalDependenciesGMP.cmake  DirectionalDependenciesPARDISO.cmake  DirectionalDependenciesSuiteSparse.cmake  DirectionalDependencyConfig.cmake  DirectionalRuntime.cmake  DirectionalVcpkg.cmake  FindCUDSS.cmake  FindGMP.cmake  FindSuiteSparse.cmake
include/directional/core/: CartesianField.h  DCEL.h  TangentBundle.h  TriMesh.h
include/directional/fields/: CrossField.h  FieldCombing.h  FieldMatching.h  FieldOperators.h  IntrinsicVertexTangentBundle.h  PCFaceTangentBundle.h  PolyVectorData.h  PolyVectorField.h  PolyVectorIteration.h  PolyVectorToRaw.h  PowerField.h  PowerToRaw.h  ProjectCurl.h  RawToPolyVector.h  RegularizedCurvatureCrossField.h
include/directional/fields/detail/: CrossField.inl
include/directional/geometry/: Curvature.h  CutMesh.h  FaceCurvature.h  MeshTopology.h  RegularizedProxyMesh.h
include/directional/integration/: Integrate.h  IntegrationData.h  IntegrationLinearSolver.h  SetupIntegration.h
include/directional/integration/solvers/: CuDssSolver.h  PardisoSolver.h
include/directional/io/: WriteOBJ.h
include/directional/meshing/: GenerateMesh.h  Mesher.h  MesherData.h  NFunctionMesher.h  SetupMesher.h
include/directional/numerics/: BigInteger.h  ENumberGMP.h  ExactGeometry.h  ExactNumber.h
include/directional/operators/: CurlMatrices.h  ExtrinsicIntrinsicMatrices.h
include/directional/pipeline/: RemeshPipeline.h
include/directional/util/: EigenIndexUtils.h  EigenSparseUtils.h  GraphUtils.h  Progress.h
python/directional/: __init__.py  cli.py  field_conversion.py
python/src/: bindings.cpp
src/: directional_cli.cpp  directional_core.cpp
src/cli/: CliBackend.cpp  CliBackend.h  CliCommands.h  CrossFieldCommand.cpp  CrossFieldOutput.cpp  CrossFieldOutput.h  FieldConversion.cpp  FieldConversion.h  InfoCommand.cpp  Main.cpp  MatrixIO.cpp  MatrixIO.h  MeshIO.cpp  MeshIO.h  ProgressDisplay.cpp  ProgressDisplay.h  RemeshCommand.cpp  RemeshOutput.cpp  RemeshOutput.h  Usage.cpp
src/core/: Library.cpp
src/gui/: FileDialog.h  FileDialogLinux.cpp  FileDialogMac.mm  FileDialogWindows.cpp  FilePicker.cpp  FilePicker.h  GuiBackend.cpp  GuiBackend.h  GuiField.cpp  GuiRemesh.cpp  Main.cpp
tests/: test_cli.py  test_native_cli_files.py
