[build-system]
requires = [
  "setuptools>=69",
  "wheel",
  "cmake>=4.0",
  "pybind11>=2.12",
]
build-backend = "directional_build_backend"
backend-path = ["."]

[project]
name = "directional"
version = "0.1.0"
description = "Headless Python bindings for the Directional field-processing library"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Akash Patel" }
]
